Update z-index to fix headers over panel at intro

--- a/src/components/BlackPanel.scss
+++ b/src/components/BlackPanel.scss
@@ -3,7 +3,7 @@ $timing: cubic-bezier(0.8, .07, .07, .9);
 .black-pannel {
   background: #1a1a1a;
   position: fixed;
-  z-index: 11;
+  z-index: 60;
   width: 100%;
   height: 100%;
   top: 0;
